--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.5.6"
   },
   "devDependencies": {
+    "next": "13.5.6",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
