--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node_modules/next/dist/bin/next dev",
+    "build": "node_modules/next/dist/bin/next build",
     "start": "node_modules/next/dist/bin/next start",
-    "lint": "next lint"
+    "lint": "node_modules/next/dist/bin/next lint"
   },
   "dependencies": {
     "react": "^18",
