--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "scm-widget-nxtjs",
-  "version": "0.1.0",
+  "name": "common-component-nxtjs",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "node_modules/next/dist/bin/next dev",
-    "build": "node_modules/next/dist/bin/next build",
-    "start": "node_modules/next/dist/bin/next start",
-    "lint": "node_modules/next/dist/bin/next lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "react": "^18",
